HTML Act + Styles Act + Img Act

--- a/Contacto.html
+++ b/Contacto.html
@@ -16,12 +16,11 @@
 </head>
   <body>
     <header id="headerIndex" class="borderIndex d-flex align-items-center">
-      <!--Logo-->
-        <a class="navbar-brand" href="#"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
-        </a>
-            <!--Comienzo Nav-->
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid"> <!--Menú-->
+      <!--Comienzo Nav-->
+      <nav class="navbar navbar-expand-lg navbar-light">
+              <a class="navbar-brand" href="#"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+              </a>   <!--Logo-->
+                <div class="container-fluid hambur"> <!--Menú-->
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
