--- a/index.html
+++ b/index.html
@@ -16,38 +16,37 @@
 </head>
 <body id="grillaIndex" class="borderIndex gradienteBody">
   <!--Inicio Header-->
-    <header id="headerIndex" class="borderIndex d-flex align-items-center">
-      <!--Logo-->
-        <a class="navbar-brand" href="#"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
-        </a>
-            <!--Comienzo Nav-->
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid"> <!--Menú-->
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html" aria-disabled="true">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Productos.html">Productos</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Ofertas.html">Ofertas</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Nosotros.html">Nosotros</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html" aria-disabled="false">Contacto</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div> <!--Fin Menú-->
-              </nav> <!--Fin Nav-->
-    </header> <!--Fin Header-->
+  <header id="headerIndex" class="borderIndex d-flex align-items-center">
+    <!--Comienzo Nav-->
+    <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+            </a>   <!--Logo-->
+              <div class="container-fluid hambur"> <!--Menú-->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html" aria-disabled="true">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Ofertas.html">Ofertas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="Contacto.html" aria-disabled="false">Contacto</a>
+                    </li>
+                  </ul>
+                </div>
+              </div> <!--Fin Menú-->
+            </nav> <!--Fin Nav-->
+  </header> <!--Fin Header-->
     <main id="mainIndex"  class="borderIndex "> <!--Main-->
         <h1 class="centrar mt-2 mb-2">INICIO</h1>
         <!--Comienzo Carrusel-->
@@ -60,14 +59,14 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="FOTOSYVIDEOS/FotoCarrusel1-copia.jpg" class="d-block w-100" alt="FotoCarrusel1">
-              <div class="carousel-caption d-block d-md-block">
+              <div class="carousel-caption d-block d-md-block paraCarrusel">
                 <h5>Todo para tu hogar!</h5>
                 <p>En Capicua siempre tenemos el producto que estas buscando!</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="FOTOSYVIDEOS/FotoCarrusel2-copia.jpg" class="d-block w-100" alt="FotoCarrusel2">
-              <div class="carousel-caption d-block d-sm-block ">
+              <div class="carousel-caption d-block d-sm-block paraCarrusel">
                 <h5 class="d-none d-sm-block">¿Sos obsesivo de la limpieza?¿Te gusta tener siempre todo limpio?</h5>
                 <p class="d-none d-sm-block"">Nosotros tambien! Acá vas a encontrar desde el producto más básico hasta el más rebuscado</p>
                 <p class="d-block d-sm-none fs-6">Acá vas a encontrar desde el producto más básico hasta el más rebuscado</p>
@@ -75,7 +74,7 @@
             </div>
             <div class="carousel-item">
               <img src="FOTOSYVIDEOS/FotoCarrusel3-copia.jpg" class="d-block w-100" alt="FotoCarrusel3">
-              <div class="carousel-caption d-block d-md-block ">
+              <div class="carousel-caption d-block d-md-block paraCarrusel">
                 <h5>¡Ofertas nuevas todas las semanas!</h5>
                 <p>Suscribite a nuestro newsletter para no perderte ni una promoción!</p>
               </div>
