HTML Mail Contacto + Style MediaQueries + Img

--- a/Contacto.html
+++ b/Contacto.html
@@ -46,7 +46,7 @@
                 </div> <!--Fin Menú-->
               </nav> <!--Fin Nav-->
     </header> <!--Fin Header-->
-    <main class="contacto mt-2"> <!--Main-->
+    <main class="contacto mt-2 fuenteContacto"> <!--Main-->
     <H1 class="text-center mt-2 mb-3">CONTACTO</H1>
     <div class="container"> <!--FAQS-->
         <div class="row justify-content-center">
@@ -147,7 +147,7 @@
               <div class="footerLogo">
                   <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                   <em class="">Capicúa Limpieza</em>
-                  <em class="infoNosotros">Mail de contacto</em>
+                  <em class="infoNosotros">capi.limpieza@gmail.com</em>
               </div>
               <div class="footerRedes">
                   <a href="https://www.facebook.com/CapicuaLimpieza/" target="_blank" class="redes btn--facebook"><i class="bi bi-facebook"></i></a>
