--- a/Productos.html
+++ b/Productos.html
@@ -194,7 +194,7 @@
               <div class="footerLogo">
                   <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                   <em class="">Capicúa Limpieza</em>
-                  <em class="infoNosotros">Mail de contacto</em>
+                  <em class="infoNosotros">capi.limpieza@gmail.com</em>
               </div>
               <div class="footerRedes">
                   <a href="https://www.facebook.com/CapicuaLimpieza/" target="_blank" class="redes btn--facebook"><i class="bi bi-facebook"></i></a>
