--- a/Ofertas.html
+++ b/Ofertas.html
@@ -111,7 +111,8 @@
                     <ol>
                         <li>10 lts de Cloro</li>
                         <li>Pack Pastillas de Cloro Multifunción</li>
-                        <li>5 lts Alguicida</li>
+                        <li>1 lt Alguicida</li>
+                        <li>1 lt Precipitante</li>
                     </ol>
                  
                     <button class="botonOfertas3">Agregar</button>
@@ -193,7 +194,7 @@
             <div class="footerLogo">
                 <img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapifooter" class="logoFooter">
                 <em class="">Capicúa Limpieza</em>
-                <em class="infoNosotros">Mail de contacto</em>
+                <em class="infoNosotros">capi.limpieza@gmail.com</em>
             </div>
             <div class="footerRedes">
                 <a href="https://www.facebook.com/CapicuaLimpieza/" target="_blank" class="redes btn--facebook"><i class="bi bi-facebook"></i></a>
