HTML btn anchor y flechas carrusel productos  + Style + Img

--- a/Productos.html
+++ b/Productos.html
@@ -48,7 +48,7 @@
   </header> <!--Fin Header-->
     <main> <!--Main-->
         <h1 class="centrar mt-2 mb-2">CATEGORIAS</h1>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">  <!-- Carusel Productos-->
           <div class="carousel-inner">
             <div class="carousel-item active">
               <section class="d-flex justify-content-around mt-3 container-fluid"> <!--Categorias 1-->
@@ -126,14 +126,14 @@
               </section> <!--Fin Categorias 3-->
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-          </button>
+          </button> <!--Fin Carusel Productos-->
         </div>
         <h2 class="centrar mt-4 mb-4">Entregas</h2> <!--Entregas-->
         <section class="d-flex justify-content-around mt-2 container-fluid">
@@ -161,7 +161,7 @@
               <h5>Lista de Precios</h5>
               <div class="contenedor2__hijo">Necesitas la lista de precios completa y actualizada? No dudes en pedirla! Contactanos por cualquier medio y te la enviamos en menos de 24hs!
               </div>
-              <button class="contenedor2__boton mt-4 align-self-end"> Ir.</button>
+              <a href="Contacto.html"><button class="contenedor2__boton mt-4 align-self-end"> Ir.</button></a>
               </div>
               </div>
           </article>
