--- a/index.html
+++ b/index.html
@@ -96,32 +96,32 @@
             <div class="col-md-4 col-6 mt-3"><!--Categoria 1-->
               <img src="./FOTOSYVIDEOS/Ariel.jpg" alt="Ariel" class="img-fluid">
               <h4>Lavarropas</h4>
-              <button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button>
+              <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"><!--Categoria 2-->
               <img src="./FOTOSYVIDEOS/Magistral.jpg" alt="Magistral" class="img-fluid">
               <h4>Vajilla</h4>
-              <button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button>
+              <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 3-->
               <img src="./FOTOSYVIDEOS/AyudinTripleAccion.jpg" alt="AyudinTripleAccion" class="img-fluid">
               <h4>Desinfección</h4>
-              <button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button>
+              <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 4-->
               <img src="./FOTOSYVIDEOS/PastillasCloro.jpg" alt="Cloro" class="img-fluid">
               <h4>Pileta</h4>
-              <button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button>
+              <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 5-->
               <img src="./FOTOSYVIDEOS/Saphirus.jpg" alt="Saphirus" class="img-fluid">
               <h4>Aromatizante</h4>
-              <button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button>
+              <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
             <div class="col-md-4 col-6 mt-3"> <!--Categoria 6-->
               <img src="./FOTOSYVIDEOS/TermoStanley.jpg" alt="Termo" class="img-fluid">
               <h4>Bazar/Regaleria</h4>
-              <button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button>
+              <a href="Productos.html"><button type="button" class="btn BotonesIndex btn-lg">Ver Categoría</button></a>
             </div>
           </div>
         </div>
