HTML + Styles + Img - PreEntrega 4

--- a/Productos.html
+++ b/Productos.html
@@ -61,17 +61,17 @@
                   <article class="contenedor col-6 col-xl-3"> <p> Aromas</p> <!--Categoria 2-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Saphirus.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">50 Productos </div>
-                      <button class="contenedor__boton--activo">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Forrajeria</p> <!--Categoria 3-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Whiskas.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">22 Productos </div>
-                      <button class="contenedor__boton--activo">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Ropa</p> <!--Categoria 4-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Ariel.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">25 Productos</div>
-                      <button class="contenedor__boton--activo mt-2">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
               </section> <!--Fin Categorias 1-->
             </div>
@@ -86,17 +86,17 @@
                   <article class="contenedor col-6 col-xl-3"> <p> Vajillas</p> <!--Categoria 6-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Magistral.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">15 Productos </div>
-                      <button class="contenedor__boton--activo">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Higiene Personal</p> <!--Categoria 7-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/HeadAndShoulders.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">40 Productos </div>
-                      <button class="contenedor__boton--activo">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Pisos</p> <!--Categoria 8-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/PerfuminaPoett.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">15 Productos</div>
-                      <button class="contenedor__boton--activo mt-2">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
               </section> <!--Fin Categorias-->
             </div>
@@ -111,17 +111,17 @@
                   <article class="contenedor col-6 col-xl-3"> <p>Textiles</p> <!--Categoria 10-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/repasador.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">35 Productos </div>
-                      <button class="contenedor__boton--activo">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Baterias</p> <!--Categoria 11-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/EnergizerPilaAA.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">8 Productos </div>
-                      <button class="contenedor__boton--activo">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Covid</p> <!--Categoria 12-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Jarbibo.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">7 Productos</div>
-                      <button class="contenedor__boton--activo mt-2">Ver Productos</button>
+                      <button class="contenedor__boton--activo"> Ver Productos</button>
                   </article>
               </section> <!--Fin Categorias 3-->
             </div>
@@ -168,7 +168,7 @@
         </div>
         </section> <!--Fin Info consultas-->
     </main> <!--Fin Main-->
-    <footer id="footerIndex" class="borderIndex"> <!--Footer-->
+    <footer id="footerIndex" class="borderIndex mt-5"> <!--Footer-->
       <div class="footer"> 
           <div class="footerMap"> <!--Iframe-->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4050.1513613558627!2d-64.26216966531447!3d-31.393242246000412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f2340e81577%3A0x7e59df54e164d3e6!2sAv.%20Col%C3%B3n%206200%2C%20X5003DFT%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1625288184019!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" class=""></iframe>
