--- a/Contacto.html
+++ b/Contacto.html
@@ -46,13 +46,13 @@
                 </div> <!--Fin Menú-->
               </nav> <!--Fin Nav-->
     </header> <!--Fin Header-->
-    <main class="contacto mt-2 fuenteContacto"> <!--Main-->
+    <main class="contacto mt-2 fuenteContacto paraForm"> <!--Main-->
     <H1 class="text-center mt-2 mb-3">CONTACTO</H1>
     <div class="container"> <!--FAQS-->
         <div class="row justify-content-center">
             <div class="col-md-6 col-sd-2 text-center">
                 <h3>Preguntas Frecuentes</h3>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush sombraContacto" id="accordionFlushExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -89,7 +89,7 @@
     </div> <!--Fin FAQS-->
     <div class="container mt-3"> <!--CONTACTO-->
         <h3 class="text-center">FORMULARIO DE CONTACTO</h3>
-        <form action="#" method="get">
+        <form class="paraForm" action="#" method="get">
         <div class="mb-3 mt-2">
             <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Introduzca su nombre y apellido" required>
@@ -115,13 +115,13 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
           </div>
         <div class="d-flex justify-content-end">
-        <button type="button" class="btn btnContactoD me-2 sombra">Borrar</button>
-        <button type="button" class="btn btnContactoS sombra">Enviar</button>
+          <input type="reset" value="Borrar" class="btn btnContactoD me-2 sombra">
+          <input type="submit" value="Enviar" class="btn btnContactoS me-2 sombra" >
         </div>
         </form>
     </div> <!--Fin Contacto-->
     </main> <!--Fin Main-->
-    <footer id="footerIndex" class="borderIndex"> <!--Footer-->
+    <footer id="footerIndex" class="borderIndex mt-2"> <!--Footer-->
       <div class="footer">
           <div class="footerMap"> <!--Iframe-->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4050.1513613558627!2d-64.26216966531447!3d-31.393242246000412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f2340e81577%3A0x7e59df54e164d3e6!2sAv.%20Col%C3%B3n%206200%2C%20X5003DFT%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1625288184019!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" class=""></iframe>
