--- a/Productos.html
+++ b/Productos.html
@@ -18,7 +18,7 @@
   <header id="headerIndex" class="borderIndex d-flex align-items-center">
     <!--Comienzo Nav-->
     <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
+            <a class="navbar-brand" href="index.html"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="logocapi" >
             </a>   <!--Logo-->
               <div class="container-fluid hambur"> <!--Menú-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,9 +26,6 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end justify-content-lg-center justify-content-xl-end" id="navbarNav">
                   <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html" aria-disabled="true">Inicio</a>
-                    </li>
                     <li class="nav-item">
                       <a class="nav-link" href="Productos.html">Productos</a>
                     </li>
