--- a/Contacto.html
+++ b/Contacto.html
@@ -49,7 +49,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-sd-2 text-center">
                 <h3>Preguntas Frecuentes</h3>
-                <div class="accordion accordion-flush sombraContacto" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
