Modal Botones Productos + PDF Precios

--- a/Ofertas.html
+++ b/Ofertas.html
@@ -46,7 +46,7 @@
 <main> <!--Main-->
     <h1 class="centrar mt-3 mb-3">OFERTAS</h1>
     <section class="d-flex justify-content-center"> <!--Explicación-->
-    <div class="grillaOfertas1">
+    <div class="grillaOfertas1 d-none d-lg-grid">
     <div class="CajaColor1 d-flex justify-content-center align-items-center areaComo"> 
         <h3>¿Como Funcionan las ofertas?</h3>
     </div>
