carrusel responsive + SCSS Act

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
             <div class="carousel-item">
               <img src="FOTOSYVIDEOS/FotoCarrusel3-copia.jpg" class="d-block w-100" alt="FotoCarrusel3">
               <div class="carousel-caption d-block d-md-block paraCarrusel">
-                <h5>¡Ofertas nuevas todas las semanas!</h5>
-                <p>Suscribite a nuestro newsletter para no perderte ni una promoción!</p>
+                <h5 class="d-none d-sm-block">¡Ofertas nuevas todas las semanas!</h5>
+                <p class="d-none d-sm-block">Suscribite a nuestro newsletter para no perderte ni una promoción!</p>
+                <p class="d-block d-sm-none fs-6">Suscribite a nuestro newsletter para no perderte ni una promoción!</p>
               </div>
             </div>
           </div>
@@ -87,7 +88,7 @@
           </button>
         </div> <!--Fin Carrusel-->
     <section> <!--Section Categorias Más Buscadas-->
-        <h2 class="centrar mt-2 mb-2">CATEGORIAS MÁS BUSCADAS</h2>
+        <h2 class="centrar mt-2 mb-2 text-center">CATEGORIAS MÁS BUSCADAS</h2>
         <div class="container">
           <div class="row text-center mt-3">
             <div class="col-md-4 col-6 mt-3"><!--Categoria 1-->
