--- a/Nosotros.html
+++ b/Nosotros.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
 </head>
 <body>
   <header id="headerIndex" class="borderIndex d-flex align-items-center">
@@ -45,13 +47,13 @@
   </header> <!--Fin Header-->
     <main> <!--Main-->
         <h1 class="centrar mt-2 mb-3">NOSOTROS</h1>
-        <section> <!--Historia-->
+        <section data-aos="zoom-in" data-aos-duration="3000"> <!--Historia-->
             <h2 class="centrar mb-2"> Nuestra Historia</h2>
             <div class="historiaDiv m-3">
                 <p class="historia">Somos una empresa familiar que comenzó en 2018 con la idea de emprender un negocio en pareja, ya teniendo experiencia en el rubro, se abrió Capicúa, empezando por clientes conocidos y a medida que se fue corriendo la voz, fuimos progresando, hasta llegar a lo que somos hoy, un negocio en constante crecimiento que busca cubrir la mayor parte de rubros, limpieza, bazar, perfumería, forrajeria, ferretería, y mucho más.</p>
             </div>
         </section> <!--Fin Historia-->
-        <section class="container-fluid"> <!--Fotos Local-->
+        <section class="container-fluid" data-aos="zoom-in" data-aos-duration="3000"> <!--Fotos Local-->
           <h2 class="text-center mb-3">Nuestro Local</h2>
           <div class="row">
         <!--  <div class="grillaNosotros">-->
@@ -72,7 +74,7 @@
           </div>
         </section> <!--Fin Fotos Local-->
     </main> <!--Fin Main-->
-    <footer id="footerIndex" class="borderIndex mt-5"> <!--Footer-->
+    <footer id="footerIndex" class="borderIndex mt-5" data-aos="fade-right" data-aos-duration="3000" data-aos-offset="50"> <!--Footer-->
       <div class="footer"> 
           <div class="footerMap"> <!--Iframe-->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4050.1513613558627!2d-64.26216966531447!3d-31.393242246000412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f2340e81577%3A0x7e59df54e164d3e6!2sAv.%20Col%C3%B3n%206200%2C%20X5003DFT%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1625288184019!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" class=""></iframe>
@@ -109,5 +111,9 @@
       </div> 
   </footer> <!--Fin Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>  
+      AOS.init({
+      });
+    </script>
 </body>
 </html>
