--- a/Productos.html
+++ b/Productos.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
 </head>
 <body>
   <header id="headerIndex" class="borderIndex d-flex align-items-center">
@@ -74,7 +76,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Aromas</p> <!--Categoria 2-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Saphirus.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -100,7 +102,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Forrajeria</p> <!--Categoria 3-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Whiskas.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -126,7 +128,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Ropa</p> <!--Categoria 4-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Ariel.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -152,7 +154,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
               </section> <!--Fin Categorias 1-->
             </div>
@@ -183,7 +185,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p> Vajillas</p> <!--Categoria 6-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Magistral.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -209,7 +211,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Higiene Personal</p> <!--Categoria 7-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/HeadAndShoulders.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -235,7 +237,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Pisos</p> <!--Categoria 8-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/PerfuminaPoett.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -261,9 +263,9 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
-              </section> <!--Fin Categorias-->
+              </section> <!--Fin Categorias 2 -->
             </div>
             <div class="carousel-item">
               <section class="d-flex justify-content-around mt-3 container-fluid"> <!--Categorias 3-->
@@ -292,8 +294,8 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                  </article>
+                      </div> <!--Fin Modal-->
+                  </article> 
                   <article class="contenedor col-6 col-xl-3"> <p>Textiles</p> <!--Categoria 10-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/repasador.jpg" alt="" class="contenedor__img borderRadius"></div>
                       <div class="contenedor__hijo mt-2 text-center">35 Productos </div>
@@ -318,7 +320,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Alcalinas</p> <!--Categoria 11-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/EnergizerPilaAA.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -344,7 +346,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
                   <article class="contenedor col-6 col-xl-3"> <p>Barbijos</p> <!--Categoria 12-->
                       <div class="contenedor__img"><img src="./FOTOSYVIDEOS/Jarbibo.jpg" alt="" class="contenedor__img borderRadius"></div>
@@ -370,7 +372,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div> <!--Fin Modal-->
                   </article>
               </section> <!--Fin Categorias 3-->
             </div>
@@ -385,7 +387,7 @@
           </button> <!--Fin Carusel Productos-->
         </div>
         <h2 class="centrar mt-4 mb-4">Entregas</h2> <!--Entregas-->
-        <section class="d-flex justify-content-around mt-2 container-fluid">
+        <section class="d-flex justify-content-around mt-2 container-fluid" data-aos="fade-right" data-aos-duration="2500">
           <div class="row gap-5 justify-content-center">
             <article class="contenedor4 col-12 col-md-4 col-xl-4">  <p> Compra en local</p> <!--Método 1-->
                 <div class="contenedor4__img"><img src="./FOTOSYVIDEOS/CompraLocal.jpg" alt="" class="contenedor4__img borderRadius"></div>
@@ -401,7 +403,7 @@
         </article>
         </div>   
         </section> <!--Fin Entregas-->
-        <section class="d-flex justify-content-around mt-4 container-fluid"> <!--Info Consultas-->
+        <section class="d-flex justify-content-around mt-4 container-fluid" data-aos="fade-left" data-aos-duration="2500"> <!--Info Consultas-->
           <div class="row">
           <article class="contenedor2 d-flex align-items-center col-12 col-md-8 col-xl-6 container-fluid ">
               <div class="d-flex">
@@ -417,7 +419,7 @@
         </div>
         </section> <!--Fin Info consultas-->
     </main> <!--Fin Main-->
-    <footer id="footerIndex" class="borderIndex mt-5"> <!--Footer-->
+    <footer id="footerIndex" class="borderIndex mt-5" data-aos="fade-right" data-aos-duration="3000" data-aos-offset="50"> <!--Footer-->
       <div class="footer"> 
           <div class="footerMap"> <!--Iframe-->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4050.1513613558627!2d-64.26216966531447!3d-31.393242246000412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f2340e81577%3A0x7e59df54e164d3e6!2sAv.%20Col%C3%B3n%206200%2C%20X5003DFT%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1625288184019!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" class=""></iframe>
@@ -454,5 +456,9 @@
       </div> 
   </footer> <!--Fin Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>  
+      AOS.init({
+      });
+    </script>
 </body>
 </html>
