--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
 </head>
 <body id="grillaIndex" class="borderIndex gradienteBody">
   <!--Inicio Header-->
@@ -89,7 +91,7 @@
         </div> <!--Fin Carrusel-->
     <section> <!--Section Categorias Más Buscadas-->
         <h2 class="centrar mt-2 mb-2 text-center">CATEGORIAS MÁS BUSCADAS</h2>
-        <div class="container">
+        <div class="container" data-aos="fade-up">
           <div class="row text-center mt-3">
             <div class="col-md-4 col-6 mt-3"><!--Categoria 1-->
               <img src="./FOTOSYVIDEOS/Ariel.jpg" alt="Ariel" class="img-fluid">
@@ -125,7 +127,7 @@
         </div>
       </section> <!--Fin Categorias Máz Buscadas-->
       <h2 class="centrar mb-2 marginNov">Novedades</h2>
-    <section class="container-fluid"> <!--Section Novedades-->
+    <section class="container-fluid" data-aos="fade-right" data-aos-duration="2000" data-aos-offset="300"> <!--Section Novedades-->
         <div class="padre justify-content-around">
           <div class="hijo1"> <!--Novedad 1-->
             <img src="./FOTOSYVIDEOS/MopaCentrifuga.png" alt="MopaCentrifuga" class="img-fluid">
@@ -147,7 +149,7 @@
         </div>
       </section> <!--Fin Section Novedades-->
     </main> <!--Fin Main-->
-    <footer id="footerIndex" class="borderIndex mt-5"> <!--Footer-->
+    <footer id="footerIndex" class="borderIndex mt-5" data-aos="fade-right" data-aos-duration="3000" data-aos-offset="50"> <!--Footer-->
     <div class="footer mt-2">
         <div class="footerMap"> <!--IFrame-->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4050.1513613558627!2d-64.26216966531447!3d-31.393242246000412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f2340e81577%3A0x7e59df54e164d3e6!2sAv.%20Col%C3%B3n%206200%2C%20X5003DFT%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1625288184019!5m2!1ses-419!2sar" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" class=""></iframe>
@@ -184,5 +186,9 @@
     </div> 
 </footer> <!--Fin Footer-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script>  
+  AOS.init({
+  });
+</script>
 </body>
 </html>
