MediaQ + SCSS + Error.html cambios

--- a/Ofertas.html
+++ b/Ofertas.html
@@ -49,10 +49,10 @@
     <h1 class="centrar mt-3 mb-3">OFERTAS</h1>
     <section class="d-flex justify-content-center"> <!--Explicación-->
     <div class="grillaOfertas1 d-none d-lg-grid">
-    <div class="CajaColor1 d-flex justify-content-center align-items-center areaComo"> 
+    <div class="CajaColor1 d-flex justify-content-center align-items-center areaComo borde1px"> 
         <h3>¿Como Funcionan las ofertas?</h3>
     </div>
-    <div class="CajaColor2 areaTipos">
+    <div class="CajaColor2 areaTipos borde1pxGris">
         <h5>Todas las semanas las ofertas se actualizan, hay dos tipos, las individuales y los packs:</h5>
         <ul class="mt-3">
             <li> 
