Comentarios SCSS + Limpieza Clases Viejas

--- a/Error.html
+++ b/Error.html
@@ -16,8 +16,8 @@
 </head>
 <body>
     <header></header>
-    <main class="position-relative">
-        <section class="container position-absolute positionError" data-aos="zoom-in" data-aos-duration="3000">
+    <main class="position-relative"> <!--Mantenimiento-->
+        <section class="container position-absolute positionError" data-aos="zoom-in" data-aos-duration="3000"> 
             <article class="row d-flex justify-content-center">
             <a href="index.html" class="text-center col-12 col-md-6 col-lg-4"><img src="./FOTOSYVIDEOS/logoCapi.jpg" alt="Logo" class="imgError"></a>
             <h3 class="col-12 text-center">Estamos Trabajando en ello!</h2>
@@ -29,10 +29,8 @@
             </div>
         </article>   
         </section>
-    </main>
-    <footer>
-
-    </footer>
+    </main> <!--Fin Mantenimiento-->
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>  
       AOS.init({
